--- a/site/pages/contacts.html
+++ b/site/pages/contacts.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="utf-8">
     <title>Контакты - Моя первая веб-страница</title>
+    <style>
+        body {
+         background: #634e44 url(../images/brianna-tucker-LGG5P7KCziU-unsplash.jpg); /* Цвет фона и путь к файлу */
+         background-size: cover; background-repeat: no-repeat; background-attachment: fixed;
+         color: #fff; /* Цвет текста */
+        }
+       </style>
 </head>
 <body>
     <header>
