--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
     <meta charset="utf-8">
     <title>Приют для животных "Пойдём домой"</title>
-    <style type="text/css">
+    <style>
         body {
             cursor: url(images/premium-icon-paw-print-3905408\ \(1\).png), default; 
             background: #634e44 url(images/brianna-tucker-LGG5P7KCziU-unsplash.jpg); /* Цвет фона и путь к файлу */
@@ -12,12 +12,10 @@
             text-shadow: 1px 1px 1px #000
         }
         header {
-            cursor: url(images/premium-icon-paw-print-3905408\ \(1\).png), default; 
             display: block;
             background: #f3eaea21
         }
         /* footer {
-            cursor: url(images/premium-icon-paw-print-3905408\ \(1\).png), default; 
             display: block;
             background: #f3eaea21
         } */
@@ -62,9 +60,9 @@
         <br>
         <br>
         <h1 style=font-family:sans-serif>ПРИЮТ ДЛЯ БЕЗДОМНЫХ СОБАК И КОШЕК</h1>
-        <font size="4">
-        <p style=font-family:consolas>Приют для бездомных животных в Медведково.</p>
-        <p style=font-family:consolas>У нас живёт более <i>300</i> собак и <i>150</i> кошек.</p></font>
+       
+        <p style=font-family:consolas><font size="4">Приют для бездомных животных в Медведково.</font></p>
+        <p style=font-family:consolas><font size="4">У нас живёт более <i>300</i> собак и <i>150</i> кошек.</font></p>
         <br>
         <br>
         <br>
@@ -77,7 +75,7 @@
         <br>
         <br>
         <br>
-        <b><p align="right" style=font-family:consolas>Им нужна ваша помощь!</p></b>
+        <p align="right" style=font-family:consolas><b>Им нужна ваша помощь!</b></p>
         <br>
     </main>
     
