--- a/site/pages/about.html
+++ b/site/pages/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ru">
 <head>
     <meta charset="utf-8">
     <title>О нас - "Пойдём домой"</title>
@@ -13,12 +13,10 @@
             text-shadow: 1px 1px 1px #000
         }
         header {
-            cursor: url(../images/premium-icon-paw-print-3905408\ \(1\).png), default; 
             display: block;
             background: #f3eaea21
         }
         /* footer {
-            cursor: url(images/premium-icon-paw-print-3905408\ \(1\).png), default; 
             display: block;
             background: #f3eaea21
         } */
