--- a/site/pages/contacts.html
+++ b/site/pages/contacts.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
     <meta charset="utf-8">
     <title>Контакты - Моя первая веб-страница</title>
     <style>
         body {
-         background: #634e44 url(../images/brianna-tucker-LGG5P7KCziU-unsplash.jpg); /* Цвет фона и путь к файлу */
-         background-size: cover; background-repeat: no-repeat; background-attachment: fixed;
-         color: #fff; /* Цвет текста */
+            cursor: url(../images/premium-icon-paw-print-3905408\ \(1\).png), default; 
+            background: #634e44 url(../images/brianna-tucker-LGG5P7KCziU-unsplash.jpg); /* Цвет фона и путь к файлу */
+            background-size: cover; background-repeat: no-repeat; background-attachment: fixed;
+            color: #fff; /* Цвет текста */
+            text-shadow: 1px 1px 1px #000
+        }
+        header {
+            display: block;
+            background: #f3eaea21
+        }
+        /* footer {
+            display: block;
+            background: #f3eaea21
+        } */
+        a {
+            cursor: url(../images/premium-icon-paw-print-3905408\ \(1\).png), pointer; /*Курсор для ссылок*/
+            display: inline-block; /* Строчно-блочный элемент */
+            background: #f3eaea44; /* Серый цвет фона */
+            color: #fff; /* Белый цвет текста */
+            padding: 1rem 1.5rem; /* Поля вокруг текста */
+            text-decoration: none; /* Убираем подчёркивание */
+            border-radius: 3px; /* Скругляем уголки */
+        }
+        a:hover {
+            color: #c0b4b4; /* Цвет ссылки при наведении на нее курсора мыши */  
+            text-decoration: none; /* Добавляем подчеркивание */
         }
        </style>
 </head>
@@ -18,15 +41,37 @@
         <a href="#">Контакты</a>
     </header>
     <main>
-        <h1>Как нас найти</h1>
-        <address>
-            190000, Санкт-Петербург,<br>
-            Невский проспект, д.1<br>
-            555-55-55<br>
-        </address>        
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <h1 align="right" style=font-family:sans-serif>Как нас найти</h1>
+        <p align="right" style=font-family:consolas>
+            <i>999999, Медведково,<br>
+            Лосиный проспект, д.9<br>
+            тел. 999-99-99</i><br>
+        </p>      
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>  
+        <br>
+        <img src="../images/pngwing.com.png" width="400" alt="map" >
+        <br>
     </main>
     <footer>
-            <span>&copy;&nbsp;Skillfactory</span>
+            <span>&copy;&nbsp;Пойдём домой, 2013-2022</span>
     </footer>
 </body>
 </html>
