--- a/site/index.html
+++ b/site/index.html
@@ -3,46 +3,49 @@
 <head>
     <meta charset="utf-8">
     <title>Приют для животных "Пойдём домой"</title>
+    <!-- CSS: курсор, фоновое изображение, ссылки-кнопки и прозрачная шапка сайта -->
     <style>
         body {
-            cursor: url(images/premium-icon-paw-print-3905408\ \(1\).png), default; 
+            cursor: url(images/premium-icon-paw-print-3905408\ \(1\).png), default; /* Курсор для всей страницы */
             background: #634e44 url(images/brianna-tucker-LGG5P7KCziU-unsplash.jpg); /* Цвет фона и путь к файлу */
             background-size: cover; background-repeat: no-repeat; background-attachment: fixed;
             color: #fff; /* Цвет текста */
-            text-shadow: 1px 1px 1px #000
+            text-shadow: 1px 1px 1px #000 /* Тень текста */
         }
         header {
             display: block;
             background: #f3eaea21
         }
+        /* Включить, чтобы сделать симметричный шапке прозрачный подвал */
         /* footer {
             display: block;
             background: #f3eaea21
         } */
         a {
             cursor: url(images/premium-icon-paw-print-3905408\ \(1\).png), pointer; /*Курсор для ссылок*/
-            display: inline-block; /* Строчно-блочный элемент */
-            background: #f3eaea44; /* Серый цвет фона */
-            color: #fff; /* Белый цвет текста */
-            padding: 1rem 1.5rem; /* Поля вокруг текста */
-            text-decoration: none; /* Убираем подчёркивание */
-            border-radius: 3px; /* Скругляем уголки */
+            display: inline-block; 
+            background: #f3eaea44; 
+            color: #fff; 
+            padding: 1rem 1.5rem; 
+            text-decoration: none; 
+            border-radius: 3px; 
         }
         a:hover {
-            color: #c0b4b4; /* Цвет ссылки при наведении на нее курсора мыши */  
-            text-decoration: none; /* Добавляем подчеркивание */
+            color: #c0b4b4; /* Цвет ссылки при наведении на неё курсора */  
+            text-decoration: none; /* Убирает подчёркивание */
          }
        </style>
 </head>
-
 <body>
+    <!-- Шапка сайта (меню) -->
     <header>
         <a href="#">Главная</a>
         <a href="pages/about.html">О нас</a>
         <a href="pages/contacts.html">Контакты</a>
     </header>
-
+<!-- Основная часть сайта -->
     <main>
+        <!-- Использую br для выравнивания, чтобы лишний раз не использовать css в этом задании -->
         <br>
         <br>
         <br>
@@ -59,8 +62,8 @@
         <br>
         <br>
         <br>
+        <!-- align, font size и style здесь по той же причние: лишний раз не использовать css в этом задании -->
         <h1 style=font-family:sans-serif>ПРИЮТ ДЛЯ БЕЗДОМНЫХ СОБАК И КОШЕК</h1>
-       
         <p style=font-family:consolas><font size="4">Приют для бездомных животных в Медведково.</font></p>
         <p style=font-family:consolas><font size="4">У нас живёт более <i>300</i> собак и <i>150</i> кошек.</font></p>
         <br>
@@ -78,7 +81,7 @@
         <p align="right" style=font-family:consolas><b>Им нужна ваша помощь!</b></p>
         <br>
     </main>
-    
+    <!-- Подвал сайта -->
     <footer>
         <span>&copy;&nbsp;Пойдём домой, 2013-2022</span>
     </footer>
